# chat-server

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/core/: config.rs  connection.rs  mod.rs  request_adapter.rs  response_adapter.rs  server.rs
src/models/: chat.rs  error.rs  message.rs  mod.rs
src/requests/: add_message.rs  create_chat.rs  handler.rs  list_chats.rs  list_messages.rs  mod.rs
src/server/: connection.rs  request_adapter.rs  response_adapter.rs  server.rs
src/store/: chats.rs  mod.rs  users.rs
src/utils/: mod.rs  result_ext.rs  utils.rs
