[package]

name = "chat_server"
version = "0.1.0"
authors = ["Kapil Agarwal <kapil6442@gmail.com>"]

[dependencies]
mio = "0.6.19"
derive_more = "0.99.2"
uuid = { version = "0.8.1", features = ["v4"] }
envconfig = "0.5.1"
envconfig_derive = "0.5.1"
log = "0.4.8"
env_logger = "0.7.1"
slab = "0.4.2"
httparse = "1.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"